[tool.poetry]
name = "somneo"
version = "0.1.0"
description = ""
authors = ["Thom Wiggers <thom@thomwiggers.nl>"]

[tool.poetry.dependencies]
python = "^3.8"
pysomneo = "^0.1.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
somneo = 'measure:run'
